fix radio button squashing bug for Firefox Andriod The height of the radio button was being set for small screens, so that the button would vertically sit inline with the label.
This sets the width and height to the same width,
which fixes a problem with the ratio of the radio icon
in Firefox Andriod. It also sets negative margin on the
label to pull it up, back inline with the radio icon.

fixes #460

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -807,7 +807,8 @@ div.correspondence p.preview_subject {
 
   input[type="radio"] {
     margin: 0;
-    height: 1.6em;
+    height: 1.2em;
+    width: 1.2em;
     float: left;
     clear: left;
 
@@ -818,8 +819,10 @@ div.correspondence p.preview_subject {
     }
 
     + label {
-      width: 85%;
+      width: 84%;
+      margin-top: -.25em;
       margin-left: .75em;
+      vertical-align: top;
 
       @include respond-min( $main_menu-mobile_menu_cutoff ) {
         margin: 0;
